added corey code

--- a/src/App.css
+++ b/src/App.css
@@ -37,35 +37,48 @@
   }
 }
 
-.wordle-header {
-  color: white;
-}
-
-.wordle-grid {
+.Wordle-square {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 75px;
+  height: 75px;
+  background-color: #333333;
+  border-radius: 20%;
+  border: medium solid grey;
+  margin: 5px;
 }
 
-.wordle-grid-row {
+.Wordle-row {
   display: flex;
   flex-direction: row;
 }
 
-.wordle-grid-letter {
+.Wordle-column {
   display: flex;
   flex-direction: column;
+}
+
+.Keyboard-key {
+  display: flex;
+  flex-grow: 2;
+  background-color: slategray;
+  border-radius: 10%;
+  padding: 7px 18px;
+  margin: 3px;
+  height: 35px;
   justify-content: center;
-  border: solid 1px white;
-  padding: 10px;
-  margin: 10px;
-  width: 25px;
-  height: 25px;
+  align-items: center;
 }
 
-.wordle-grid-letter-true {
-  background-color: green;
+.Keyboard-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.wordle-grid-letter-false {
- background-color: grey;
+.Keyboard-grid {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
